cleared with MeasureControl

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
                         <a class="nav-link" href="index.html">Главная <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="maps/park.html">Карта парка</a>
+                        <a class="nav-link" href="park.html">Карта парка</a>
                     </li>
                 </ul>
             </div>
@@ -86,7 +86,7 @@
 
     <footer>
         <a href="index.html">На главную</a>
-        <a href="maps/park.html">Карта парка</a>
+        <a href="park.html">Карта парка</a>
     </footer>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
